fixed pagination "jump to page" form, created menu for quick select/unselect/inverse checkboxes

--- a/html/css/forum-posts.css
+++ b/html/css/forum-posts.css
@@ -261,6 +261,8 @@ a.pl-select-link:after{
 }
 .post-timestamp{
   color:#8c8c8c;
+  position: relative;
+  top: 1px;
 }
 .post-marker{
   margin-left: 25px;
